Size Fixes
Text size for mobile
Change font if height is too small

--- a/test1/test.css
+++ b/test1/test.css
@@ -1,6 +1,8 @@
 html,
 body{
     height:100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 body{
@@ -8,12 +10,14 @@ body{
     width: 100%;
     font-family: 'Roboto', sans-serif;    
     background-color: #eeeeee;
+    overflow:hidden;
 }
 
 #header {
     background-color: #eeeeee;
     height: 100%;
     width: 100%;
+    overflow:hidden;
 }
 
 #header:before{
@@ -24,7 +28,7 @@ body{
     background-position: center; 
     background-size: cover; 
     position: absolute;
-    opacity: 0.2;
+    opacity: 0.15;
     -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 4s; /* Firefox < 16 */
     -ms-animation: fadein 4s; /* Internet Explorer */
@@ -46,8 +50,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    min-width: 350px;
-    max-width: 500px;
+    width: 450px;
 }
 
 #middle__content h1 {
@@ -68,7 +71,10 @@ body{
     font-size: 48;
     color: #1E1E1E;
     margin: 0px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 #middle__content h1 a {
     text-decoration: none;
@@ -122,36 +128,50 @@ body{
 
 @keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.2; }
+    to   { opacity: 0.15; }
 }
 /* Firefox < 16 */
 @-moz-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.2; }
+    to   { opacity: 0.15; }
 }
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes 
 fadein {
     from { opacity: 0; }
-    to   { opacity: 0.2; }
+    to   { opacity: 0.15; }
 }
 /* Internet Explorer */
 @-ms-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.2; }
+    to   { opacity: 0.15; }
 }
 /* Opera < 12.1 */
 @-o-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.2; }
+    to   { opacity: 0.15; }
 }
 
-@media screen and (max-width: 450px) {
-  #navbar li:not(:first-child) {
-      display: none;
+
+@media screen and (max-width: 500px), screen and (max-height: 450px) {
+    #navbar li:not(:first-child), #middle__content i {
+        display: none;
+        }
+    #navbar a.menu {
+        float: right;
+        display: block;
     }
-  #navbar a.menu {
-    float: right;
-    display: block;
-  }
+
+    #middle__content {
+        width: 350px;
+    }
+
+    #middle__content h1 {
+        font-size: 38;
+    }
+
+    #middle__content h2 {
+        font-size: 18;
+    }
 }
+
